[tool.poetry]
name = "python-client"
version = "0.1.0"
description = ""
authors = ["Teodor Wojcik <teodor.wojcik@inera.se>"]
readme = "README.md"
packages = [{include = "python_client"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fhirclient = "^4.1.0"
streamlit = "^1.16.0"
pandas = "^1.5.2"
black = "^22.12.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
